--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,29 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap'); */
+
+* {
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 10px;
+  font-family: 'Roboto', sans-serif;
+  /* font-weight: 500; */
 }
 
-.App-link {
-  color: #61dafb;
+ .Nav > button {
+  font-size: 1.5em;
+  border-style: none;
+  background-color: #fff;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Nav > h1 {
+  font-size: 2.7em;
+  cursor: pointer;
 }
 
-button {
-  font-size: calc(10px + 2vmin);
-}
